# codegraph

test-repo/python1/: .env  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
test-repo/python1/.cursor/: review-memory.md
test-repo/python1/.cursor/rules/: backend-conventions.mdc  code-comments.mdc  dev-workflow-order.mdc  frontend-conventions.mdc  project-overview.mdc
test-repo/python1/docs/: API文档.md  GitLab分支与质量门禁.md  README.md  SonarQube与检查标准.md  TODO.md  model_deploy.md  pos_qa_contract.md  review-strategy.md  业务实现检查标准.md  代码检查.md  前后端可扩展性分析.md  前端开发文档.md  后端开发文档.md  开发框架说明.md  数据库管理与迁移.md  数据库设计.md  文档体系.md  架构师视角-检查与Review充分性评估.md  测试体系.md  测试策略与用例生成.md  用户管理中心-修改总结.md  知识库应用问答-修改总结.md  需求文档.md  页面跳转与路由.md
test-repo/python1/docs/contract/: api_config.md  file.md  kb.md  rag_dialog.md  rag_qa.md
test-repo/python1/scripts/: README.md  check_all.ps1  check_audit.ps1  check_backend.ps1  check_fix.ps1  check_frontend.ps1  collect_api_diff.ps1  collect_metrics.ps1  deploy_linux.sh  deploy_python_only.sh  generate_test_report.ps1  generate_test_report.py  review_prepare.ps1  run_full_check.ps1  run_sonar.ps1  run_tests.ps1
test-repo/python1/scripts/metrics/: api_path_diff.py  backend_metrics.py  frontend_metrics.py
test-repo/python1/src/: __init__.py  config.yml  utils.py
test-repo/python1/src/backend/: .env  .env.example  README.md  config.py  main.py  migrate_add_chat_description.py  migrate_add_es_id.py  migrate_add_es_id.sql  migrate_add_kb_chunk_config.py  migrate_add_model_config.py  migrate_db.py  migrate_fix_kb_doc_data.py  migrate_sqlite_to_postgres.py  requirements.txt
test-repo/python1/src/frontend/: .env.development  .env.example  .env.production  .env.test  .prettierignore  .stylelintignore  .stylelintrc.js  README.md  eslint.config.mjs  index.html  lint-staged.config.js  package.json  playwright.config.js  pnpm-lock.yaml  vite.config.js
test-repo/python1/src/index/: __init__.py  embed.py  es_client.py  rerank.py  retrieve.py
test-repo/python1/src/llm/: __init__.py  openai_model.py
test-repo/python1/src/memory/: README.md  __init__.py  context_manager.py
(+551 files in other folders)
